--- a/Imobiliaria/src/Visao/CadastroImovel.form
+++ b/Imobiliaria/src/Visao/CadastroImovel.form
@@ -360,6 +360,275 @@
                         </Container>
                       </SubComponents>
                     </Container>
+                    <Container class="javax.swing.JPanel" name="jpEspecificacoesImv">
+                      <Properties>
+                        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                          <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
+                            <TitledBorder title="Especifica&#xe7;&#xf5;es do Im&#xf3;vel"/>
+                          </Border>
+                        </Property>
+                      </Properties>
+
+                      <Layout>
+                        <DimensionLayout dim="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="jpLableEspecificacoes" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jpTextFieldsEspecificacoes" pref="26" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
+                        </DimensionLayout>
+                        <DimensionLayout dim="1">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jpLableEspecificacoes" max="32767" attributes="0"/>
+                              <Component id="jpTextFieldsEspecificacoes" alignment="0" max="32767" attributes="0"/>
+                          </Group>
+                        </DimensionLayout>
+                      </Layout>
+                      <SubComponents>
+                        <Container class="javax.swing.JPanel" name="jpLableEspecificacoes">
+
+                          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+                            <Property name="columns" type="int" value="1"/>
+                            <Property name="verticalGap" type="int" value="8"/>
+                            <Property name="rows" type="int" value="12"/>
+                          </Layout>
+                          <SubComponents>
+                            <Component class="javax.swing.JLabel" name="jlTamanho">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Tamanho:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlQuartos">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Quartos:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlSalas">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Salas:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlSuites">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Suites:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlLavabo">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Lavabo:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlSacada">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Sacada:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlEdicula">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Ed&#xed;cula:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlPscina">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Pscina:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlEmbutido">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Embutido:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlTeto">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Teto:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlTelhado">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Telhado:"/>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JLabel" name="jlChurrasqueira">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="Churrasqueira:"/>
+                              </Properties>
+                            </Component>
+                          </SubComponents>
+                        </Container>
+                        <Container class="javax.swing.JPanel" name="jpTextFieldsEspecificacoes">
+
+                          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+                            <Property name="columns" type="int" value="1"/>
+                            <Property name="verticalGap" type="int" value="8"/>
+                            <Property name="rows" type="int" value="12"/>
+                          </Layout>
+                          <SubComponents>
+                            <Component class="javax.swing.JTextField" name="jtfTamanho">
+                            </Component>
+                            <Component class="javax.swing.JComboBox" name="jcbQuartos">
+                              <Properties>
+                                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                                  <StringArray count="11">
+                                    <StringItem index="0" value="0"/>
+                                    <StringItem index="1" value="1"/>
+                                    <StringItem index="2" value="2"/>
+                                    <StringItem index="3" value="3"/>
+                                    <StringItem index="4" value="4"/>
+                                    <StringItem index="5" value="5"/>
+                                    <StringItem index="6" value="6"/>
+                                    <StringItem index="7" value="7"/>
+                                    <StringItem index="8" value="8"/>
+                                    <StringItem index="9" value="9"/>
+                                    <StringItem index="10" value=" "/>
+                                  </StringArray>
+                                </Property>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JComboBox" name="jcbSala">
+                              <Properties>
+                                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                                  <StringArray count="11">
+                                    <StringItem index="0" value="0"/>
+                                    <StringItem index="1" value="1"/>
+                                    <StringItem index="2" value="2"/>
+                                    <StringItem index="3" value="3"/>
+                                    <StringItem index="4" value="4"/>
+                                    <StringItem index="5" value="5"/>
+                                    <StringItem index="6" value="6"/>
+                                    <StringItem index="7" value="7"/>
+                                    <StringItem index="8" value="8"/>
+                                    <StringItem index="9" value="9"/>
+                                    <StringItem index="10" value=" "/>
+                                  </StringArray>
+                                </Property>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JComboBox" name="jcbSuites">
+                              <Properties>
+                                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                                  <StringArray count="11">
+                                    <StringItem index="0" value="0"/>
+                                    <StringItem index="1" value="1"/>
+                                    <StringItem index="2" value="2"/>
+                                    <StringItem index="3" value="3"/>
+                                    <StringItem index="4" value="4"/>
+                                    <StringItem index="5" value="5"/>
+                                    <StringItem index="6" value="6"/>
+                                    <StringItem index="7" value="7"/>
+                                    <StringItem index="8" value="8"/>
+                                    <StringItem index="9" value="9"/>
+                                    <StringItem index="10" value=" "/>
+                                  </StringArray>
+                                </Property>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JComboBox" name="jcbLavabo">
+                              <Properties>
+                                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                                  <StringArray count="11">
+                                    <StringItem index="0" value="0"/>
+                                    <StringItem index="1" value="1"/>
+                                    <StringItem index="2" value="2"/>
+                                    <StringItem index="3" value="3"/>
+                                    <StringItem index="4" value="4"/>
+                                    <StringItem index="5" value="5"/>
+                                    <StringItem index="6" value="6"/>
+                                    <StringItem index="7" value="7"/>
+                                    <StringItem index="8" value="8"/>
+                                    <StringItem index="9" value="9"/>
+                                    <StringItem index="10" value=" "/>
+                                  </StringArray>
+                                </Property>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JComboBox" name="jcbSacada">
+                              <Properties>
+                                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                                  <StringArray count="11">
+                                    <StringItem index="0" value="0"/>
+                                    <StringItem index="1" value="1"/>
+                                    <StringItem index="2" value="2"/>
+                                    <StringItem index="3" value="3"/>
+                                    <StringItem index="4" value="4"/>
+                                    <StringItem index="5" value="5"/>
+                                    <StringItem index="6" value="6"/>
+                                    <StringItem index="7" value="7"/>
+                                    <StringItem index="8" value="8"/>
+                                    <StringItem index="9" value="9"/>
+                                    <StringItem index="10" value=" "/>
+                                  </StringArray>
+                                </Property>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JCheckBox" name="jchkbEdicula">
+                            </Component>
+                            <Component class="javax.swing.JCheckBox" name="jchkbPiscina">
+                            </Component>
+                            <Component class="javax.swing.JComboBox" name="jcbEmbutido">
+                              <Properties>
+                                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                                  <StringArray count="11">
+                                    <StringItem index="0" value="0"/>
+                                    <StringItem index="1" value="1"/>
+                                    <StringItem index="2" value="2"/>
+                                    <StringItem index="3" value="3"/>
+                                    <StringItem index="4" value="4"/>
+                                    <StringItem index="5" value="5"/>
+                                    <StringItem index="6" value="6"/>
+                                    <StringItem index="7" value="7"/>
+                                    <StringItem index="8" value="8"/>
+                                    <StringItem index="9" value="9"/>
+                                    <StringItem index="10" value=" "/>
+                                  </StringArray>
+                                </Property>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JComboBox" name="jcbTeto">
+                              <Properties>
+                                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                                  <StringArray count="11">
+                                    <StringItem index="0" value="0"/>
+                                    <StringItem index="1" value="1"/>
+                                    <StringItem index="2" value="2"/>
+                                    <StringItem index="3" value="3"/>
+                                    <StringItem index="4" value="4"/>
+                                    <StringItem index="5" value="5"/>
+                                    <StringItem index="6" value="6"/>
+                                    <StringItem index="7" value="7"/>
+                                    <StringItem index="8" value="8"/>
+                                    <StringItem index="9" value="9"/>
+                                    <StringItem index="10" value=" "/>
+                                  </StringArray>
+                                </Property>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JComboBox" name="jcbTelhado">
+                              <Properties>
+                                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                                  <StringArray count="11">
+                                    <StringItem index="0" value="0"/>
+                                    <StringItem index="1" value="1"/>
+                                    <StringItem index="2" value="2"/>
+                                    <StringItem index="3" value="3"/>
+                                    <StringItem index="4" value="4"/>
+                                    <StringItem index="5" value="5"/>
+                                    <StringItem index="6" value="6"/>
+                                    <StringItem index="7" value="7"/>
+                                    <StringItem index="8" value="8"/>
+                                    <StringItem index="9" value="9"/>
+                                    <StringItem index="10" value=" "/>
+                                  </StringArray>
+                                </Property>
+                              </Properties>
+                            </Component>
+                            <Component class="javax.swing.JCheckBox" name="jchkChurrasqueira">
+                            </Component>
+                          </SubComponents>
+                        </Container>
+                      </SubComponents>
+                    </Container>
                   </SubComponents>
                 </Container>
               </SubComponents>
