--- a/trunk/Imobiliaria/src/Visao/VendaImovelN.form
+++ b/trunk/Imobiliaria/src/Visao/VendaImovelN.form
@@ -37,8 +37,8 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jpVenda" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jpControlesVenda" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="36" max="32767" attributes="0"/>
+              <Component id="jpControlesVenda" min="-2" pref="24" max="-2" attributes="0"/>
+              <EmptySpace pref="63" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -116,7 +116,7 @@
             <Property name="rows" type="int" value="4"/>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JComboBox" name="jComboBox1">
+            <Component class="javax.swing.JComboBox" name="jcbNumero">
               <Properties>
                 <Property name="editable" type="boolean" value="true"/>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
@@ -209,9 +209,18 @@
             <Property name="rows" type="int" value="2"/>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JTextField" name="jtfNome">
+            <Component class="javax.swing.JComboBox" name="jcbNome">
+              <Properties>
+                <Property name="editable" type="boolean" value="true"/>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="0"/>
+                </Property>
+              </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="jtfCPF">
+            <Component class="javax.swing.JLabel" name="jlDescricaoCPF">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="(cpf)"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
