--- a/trunk/Imobiliaria/src/Visao/CadastroPessoaN.form
+++ b/trunk/Imobiliaria/src/Visao/CadastroPessoaN.form
@@ -22,26 +22,19 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jpDadosPessoais" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jpEndereco" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jpControles" alignment="0" max="32767" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-          </Group>
+          <Component id="jpDadosPessoais" alignment="0" max="32767" attributes="0"/>
+          <Component id="jpEndereco" alignment="0" max="32767" attributes="0"/>
+          <Component id="jpControles" alignment="0" pref="598" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace pref="53" max="32767" attributes="0"/>
               <Component id="jpDadosPessoais" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jpEndereco" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jpControles" min="-2" max="-2" attributes="0"/>
+              <Component id="jpControles" pref="24" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -114,6 +107,9 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbNomeItemStateChanged"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="jtfCPF">
             </Component>
@@ -136,7 +132,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jpLE" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jpTFE" pref="519" max="32767" attributes="0"/>
+                  <Component id="jpTFE" pref="539" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
